tests/cases/compiler-development/artifact/errors/syntax-recovery-missing-nested-block-close.ari
fn broken() -> i64 {
  if true {
    return 1;
fn after() -> i64 {
  return 2;
}
